<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        style="@style/default_activity_style"
        android:orientation="vertical"
        tools:context=".UserDetailActivity">

        <TextView
            android:id="@+id/payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/customer_title"
            style="@style/Header_text"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="30dp"/>

        <TextView
            android:id="@+id/firstNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"/>

        <EditText
            android:id="@+id/u_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="textPersonName"/>

        <TextView
            android:id="@+id/house"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/house"/>

        <EditText
            android:id="@+id/u_house"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/street"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/street"/>


        <EditText
            android:id="@+id/u_street"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"/>

        <TextView
            android:id="@+id/citytx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city"/>

        <EditText
            android:id="@+id/u_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"/>

        <TextView
            android:id="@+id/postal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post"/>

        <EditText
            android:id="@+id/u_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"/>

        <TextView
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"/>

        <EditText
            android:id="@+id/u_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:autofillHints="" />

        <TextView
            android:id="@+id/mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"/>

        <EditText
            android:id="@+id/u_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"/>

        <TextView
            android:id="@+id/pizza"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/favPizza"/>

        <EditText
            android:id="@+id/u_pizza"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"/>

        <TextView
            android:id="@+id/extra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/extra"/>

        <EditText
            android:id="@+id/u_extra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"/>

        <Button
            android:id="@+id/user"
            style="@style/Button_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickUserDetail"
            android:text="@string/user_btn"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"/>

    </LinearLayout>
</ScrollView>